about.html és github.html javítva

--- a/src/about.html
+++ b/src/about.html
@@ -30,7 +30,14 @@
     </ul>
 
     <h1>Cím</h1>
-
+    <h2>GitHub</h2>
+    <div>
+        <p>
+          <a href="https://github.com/TheRealGerriii">
+            https://github.com/TheRealGerriii
+          </a>
+        </p>
+    </div>
     <div>
       <p>
         Készítette: Hermányi Gergely Barnabás, 2021-10-26, SZOFT II/N
