--- a/src/github.html
+++ b/src/github.html
@@ -30,6 +30,14 @@
     </ul>
 
     <h1>Cím</h1>
+    <h2>GitHub</h2>
+    <div>
+      <p>
+        <a href="https://github.com/TheRealGerriii">
+          https://github.com/TheRealGerriii
+        </a>
+      </p>
+    </div>
 
     <div>
       <p>
