--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>github</title>
+    <title>About</title>
 </head>
 <body>
     <ul class="nav justify-content-center">
@@ -29,9 +29,12 @@
         </li>
     </ul>
 
-    <h1>Cím</h1>
+    <h1>About</h1>
 
     <div>
+      <p>
+        Egy egyszerű felület ami lábról vát át méterre.
+      </p>
       <p>
         Készítette: Hermányi Gergely Barnabás, 2021-10-26, SZOFT II/N
       </p>
