--- a/src/github.html
+++ b/src/github.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>github</title>
+    <title>Github</title>
 </head>
 <body>
     <ul class="nav justify-content-center">
@@ -29,8 +29,7 @@
         </li>
     </ul>
 
-    <h1>Cím</h1>
-    <h2>GitHub</h2>
+    <h1>Github</h1>
     <div>
       <p>
         <a href="https://github.com/TheRealGerriii">
