--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       </li>
     </ul>
 
-    <h1>Cím</h1>
+    <h1>Láb-méter váltó</h1>
 
       <div class="mb-3 container">
         <label for="feet" class="form-label">Láb</label>
